# crewday

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Makefile  README.md  alembic.ini  babel.cfg  pyproject.toml
.beads/: .gitignore  interactions.jsonl  issues.jsonl
.claude/: README.md
.claude/agents/: coder.md  commiter.md  documenter.md  oracle.md  reviewer.md
.claude/codebase/: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  refresh-disposable-domains.yml
.playwright-mcp/: README.md
app/: capabilities.py  config.py  main.py
app/admin/: __init__.py  backup.py  init.py  rotate_root_key.py  rotate_secrets.py  rotate_session_secret.py
app/agent/: __init__.py  dispatcher.py  tokens.py
app/agent_docs/: __init__.py  admin_boundaries.md  crewday_overview.md
app/api/: deps.py  errors.py  factory.py  health.py  pagination.py  preferences.py  proxy.py  uploads.py
cli/: README.md
migrations/: __init__.py  env.py
mocks/: Dockerfile  Dockerfile.app-api  README.md  docker-compose.e2e.yml  docker-compose.yml  pyproject.toml
scripts/: _schemathesis_seed.py  agent-code-health.py  agent-curl.sh  agent-next-task.sh  agent-quality.sh  agent-status.sh  check_csp_inlines.py  check_tenant_agnostic.py  cli_parity_check.py  dev-login.sh  dev-seed-personal.sh  dev-stack-up.sh  dev_login.py  dev_seed_journey4.py  dev_seed_personal.json  dev_seed_personal.py  i18n_extract.py  refresh_disposable_domains.py  regen_openapi.py  render-loc-stack-plot.py  schemathesis_run.sh  seed_load.py  update-loc-chart.sh
tests/: conftest.py
(+1548 files in other folders)
